--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
           integrated system - no part isn't of at least some interest to me.
         </p>
         <p>
-          Most important is my wife Anna, Mr. Moose, and our family and friends.
+          Most important is my wife Anna, Mr. Moose, Calvin, and our family and friends.
         </p>
       </main>
 
