article: ai zeitgeist explained

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             </section>
 
             <nav>
+                <a href="ai-zeitgeist-explained">AI Zeitgeist Explained</a>
                 <a href="json-columns-are-tech-debt"
                     >JSON Columns are Tech Debt</a
                 >
@@ -152,6 +153,30 @@
                 <a href="#s3-database">S3 as a Database</a>
                 <a href="#thought-diet">Thought Diet</a>
             </nav>
+
+            <article id="ai-zeitgeist-explained">
+                <h2>AI Zeitgeist Explained</h2>
+
+                <p>
+                    There's a mood toward AI, an intuition, a gut feel so many
+                    people have but cannot quite explain it. Here are three
+                    statements that crystalize it:
+                </p>
+
+                <ul>
+                    <li>Autonomy is more valuable than intelligence.</li>
+                    <li>
+                        There is no substitute for the type of intelligence that
+                        emerges from biological brains.
+                    </li>
+                    <li>
+                        As long as a human mind is needed, it is beneficial for
+                        the human mind to be intelligent. Once it is not
+                        beneficial for the human mind to be intelligent, the
+                        human mind is not needed.
+                    </li>
+                </ul>
+            </article>
 
             <article id="json-columns-are-tech-debt">
                 <h2>JSON Columns are Technical Debt</h2>
