fix: posted date

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 
             <article id="ai-zeitgeist-explained">
                 <h2>AI Zeitgeist Explained</h2>
+                <p>Posted May 7th, 2025</p>
 
                 <p>
                     There's a mood toward AI, an intuition, a gut feel so many
