--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
                 <p>
                     There's a mood toward AI, an intuition, a gut feel so many
-                    people have but cannot quite explain it. Here are three
+                    people have but cannot quite explain. Here are three
                     statements that crystalize it:
                 </p>
 
