fix: hash links

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             </section>
 
             <nav>
-                <a href="ai-zeitgeist-explained">AI Zeitgeist Explained</a>
-                <a href="json-columns-are-tech-debt"
+                <a href="#ai-zeitgeist-explained">AI Zeitgeist Explained</a>
+                <a href="#json-columns-are-tech-debt"
                     >JSON Columns are Tech Debt</a
                 >
                 <a href="#single-file-site">Single File Site</a>
