fix: article links

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             </section>
 
             <nav>
-                <a href="kiro-ide">Kiro IDE</a>
-                <a href="prolog-dabble">Prolog Dabble</a>
+                <a href="#kiro-ide">Kiro IDE</a>
+                <a href="#prolog-dabble">Prolog Dabble</a>
                 <a href="#ai-conjectures">A few AI Conjectures</a>
                 <a href="#json-columns-are-tech-debt"
                     >JSON Columns are Tech Debt</a
