article: future of platform engineering draft

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 border-top: 2px dotted #000;
                 width: 20em;
                 margin-top: 1em;
-                margint-bottom: 1em;
+                margin-bottom: 1em;
                 opacity: 0.28;
             }
 
@@ -154,6 +154,9 @@
             <nav>
                 <ol>
                     <li>
+                        <a href="#future-of-platform-engineering">Future of Platform Engineering</a>
+                    </li>
+                    <li>
                         <a
                             href="#minimal-systems"
                             onmousedown="window.location.href='/#minimal-systems'"
@@ -161,6 +164,7 @@
                             Minimal Systems
                         </a>
                     </li>
+                     
                     <li>
                         <a href="#kiro-ide">Kiro IDE</a>
                     </li>
@@ -211,6 +215,35 @@
                     </li>
                 </ol>
             </nav>
+
+            <article id="future-of-platform-engineering">
+                <h2>Draft: The Future of Platform Engineering</h2>
+                <p>Posted Oct 26th, 2025</p>
+
+
+                <h3>Current SOTA Platform Engineering</h3>
+
+                <ul>
+                    <li>
+                        <a href="https://vercel.com/fluid"  target="_blank">Vercel Fluid Compute</a>
+                    </li>
+                    <li>
+                        <a href="https://useworkflow.dev/" target="_blank">Workflow DevKit by Vercel</a>
+                    </li>
+                     <li>
+                        <a href="https://railway.com/" target="_blank">Railway</a>
+                    </li>
+                     <li>
+                        <a href="https://www.shuttle.dev/" target="_blank">Shuttle</a>
+                    </li>
+                     <li>
+                        <a href="https://trigger.dev/" target="_blank">Trigger.job</a>
+                    </li>
+                    <li>
+                        <a href="https://blog.cloudflare.com/capnweb-javascript-rpc-library/" target="_blank">Cap'n Web RPC by Cloudflare</a>
+                    </li>
+                </ul>
+            </article>
 
             <article id="minimal-systems">
                 <h2>Minimal Systems</h2>
