--- a/index.html
+++ b/index.html
@@ -135,19 +135,10 @@
             <section>
                 <h2>About Me</h2>
                 <p>
-                    I spend an insane amount of time on the computer and have
-                    for many years. I find software deeply facinating. I feel
-                    that there are secrets still hidden within the nature of
-                    computing.
+                    Senior fullstack dev. Consulting for an <a href="https://villagecaregiving.com" target="_blank">in-home care company</a>. Indie-hacking with Bun, sqlite, vanilla html/css/js. Running on <a href="https://railway.com?referralCode=ABSfL6" target="_blank">Railway</a>. 
                 </p>
                 <p>
-                    However, computing is just a piece of the puzzle. The world
-                    is an integrated system - every part is of at least some
-                    interest to me.
-                </p>
-                <p>
-                    Most important is my wife Anna, Mr. Moose, Calvin, and our
-                    family and friends.
+                    My work is dedicated to Anna, Owen, Moose, Bunga, fam, and all those who came before me.
                 </p>
             </section>
 
