feat: projects; hey world blog

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <section>
                 <h2>About Me</h2>
                 <p>
-                    Senior fullstack dev. Consulting for an <a href="https://villagecaregiving.com" target="_blank">in-home care company</a>. Indie-hacking with Bun, sqlite, vanilla html/css/js. Running on <a href="https://railway.com?referralCode=ABSfL6" target="_blank">Railway</a>. 
+                    7 years fullstack dev. Consulting for an <a href="https://villagecaregiving.com" target="_blank">in-home care company</a>. Solo building with Bun, sqlite, vanilla html/css/js - running on <a href="https://railway.com?referralCode=ABSfL6" target="_blank">Railway</a>. 
                 </p>
                 <p>
                     My work is dedicated to Anna, Owen, Moose, Bunga, fam, and all those who came before me.
@@ -143,7 +143,26 @@
             </section>
 
             <nav>
+                <h4>
+                    Projects
+                </h4>
+
                 <ol>
+                    <li>
+                        <a href="https://superfans9alert.kolesparks.com" target="_blank">Superfan S9 Alert</a>
+                    </li>
+                </ol>
+            </nav>
+
+            <nav>
+                
+                <h4>
+                    Posts
+                </h4>
+                <ol>
+                     <li>
+                        <a href="#hey-world-blog">Hey World Blog</a>
+                    </li>
                     <li>
                         <a href="#future-of-platform-engineering">Future of Platform Engineering</a>
                     </li>
@@ -206,6 +225,15 @@
                     </li>
                 </ol>
             </nav>
+
+            <article id="hey-world-blog">
+                <h2>Hey World, the blog is moving</h2>
+                <p>Posted Jan 3rd, 2026</p>
+
+                <p>I'm moving my email to hey.com and with it comes a really cool feature where you can email world@hey.com and your email becomes a blog post.</p>
+
+                <p>Follow me: <a href="http://world.hey.com/kole.sparks">world.hey.com/kole.sparks</a></p>
+            </article>
 
             <article id="future-of-platform-engineering">
                 <h2>Draft: The Future of Platform Engineering</h2>
