feat: oss contr.

--- a/index.html
+++ b/index.html
@@ -165,12 +165,32 @@
 
             <nav>
                 <h4>
-                    Projects
+                    Open Source Contributions
                 </h4>
 
                 <ol>
+                   
                     <li>
-                        <a href="https://superfans9alert.kolesparks.com" target="_blank">Superfan S9 Alert</a>
+                        <a href="https://github.com/orangewise/s3-files/pull/26" target="_blank">s3-files crash</a>
+                    </li>
+                     <li>
+                        <a href="https://github.com/oven-sh/bun/issues/13226" target="_blank">bun sqlite crash</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/kolesparks/react-native-snap-cam" target="_blank">
+                            react native snap cam
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/naoufal/react-native-touch-id/pull/206" target="_blank">
+                            react native touch id crash 1
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://github.com/naoufal/react-native-touch-id/pull/196" target="_blank">
+                            react native touch id crash 2
+                        </a>
                     </li>
                 </ol>
             </nav>
