article: llm coding break

--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
                     Posts ➡️
                 </h4>
                 <ol>
+                    <li>
+                        <a href="#llm-coding-break">Taking a break from LLM coding</a>
+                    </li>
                      <li>
                         <a href="#race-to-the-bottom">Race to the Bottom</a>
                     </li>
@@ -266,6 +269,26 @@
                     </li>
                 </ol>
             </nav>
+
+
+            <article id="llm-coding-break">
+                <h2>Taking a break from LLM Coding</h2>
+                <p>Posted Jan 15th, 2026</p>
+
+                <p>
+                    Since 2023, or whenever GPT-3 was released, I've pushed LLMs to their limit for automating software development.
+                    <br/>
+
+                    Despite the improvement of LLMs for coding, and despite the countless hours and dollars spent, I am still unsure of them. They are so much better than they were - by a light year. 
+                    But that isn't the problem. The problem is what happens to me over time. Even after a few days of heavy LLM usage - I feel the atrophy. 
+                    The atrophy of every skill. Not just the low-level coding skills, but the high level design and architecture skills, too. 
+                    Many people are saying that the new valuable skills for a human dev to have are now architecture and design among other things. 
+                    But I feel that these high-level skills waste away too - just maybe more slowly or less obviously. This means the whole "AI-Orchestrator" job is self-defeating - you will get worse at your job over time - not better.
+                    That is my theory anyway and that is how I feel in a literal sense after pushing "AI-Orchestrator" to the limit for years. So I am taking a break, a few weeks, a month, idk, to really focus on my skills. I will still use LLMs for deep-research and code reviews - maybe. 
+                    But I'll be writing every line of code and thinking through problems almost entirely by myself.
+                </p>
+
+            </article>
 
             <article id="race-to-the-bottom">
                 <h2>The Race to the Bottom</h2>
